new command for long Chinese title wrap

--- a/bachelor/CNUthesisX.cfg
+++ b/bachelor/CNUthesisX.cfg
@@ -4,6 +4,7 @@
   % 论文信息
   \classification{G43}
   \title{红外热波检测中的图像匹配研究}
+  \titletail{}
   \entitle{The research on image registration in infrared thermal wave nondestructive inspection}
   \subtitle{}
   \ensubtitle{}
